Fix spacings and paddings

--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,7 @@ dd {
 
 .content p > img {
   border: 1px solid #785fa0;
+  box-sizing: border-box;
 }
 
 /* ----------------- Comments ----------------- */
